# AD.LightYears

./: CMakeLists.txt
LightYears.Engine/: CMakeLists.txt
LightYears.Engine/include/: EntryPoint.h
LightYears.Engine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  CycleClock.h  Delegate.h  IActor.h  ICleanCycle.h  IPlay.h  IRender.h  IStep.h  ITick.h  MathUtility.h  Object.h  PhysicsContactListener.h  PhysicsSystem.h  World.h
LightYears.Engine/src/: EntryPoint.cpp
LightYears.Engine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  CycleClock.cpp  MathUtility.cpp  Object.cpp  PhysicsContactListener.cpp  PhysicsSystem.cpp  World.cpp
LightYears.Game/: CMakeLists.txt  config.h.in
LightYears.Game/include/: config.h
LightYears.Game/include/gameframework/: GameApplication.h
LightYears.Game/include/gameplay/: HealthComponent.h
LightYears.Game/include/player/: PlayerSpaceship.h
LightYears.Game/include/spaceships/: Spaceship.h
LightYears.Game/include/weapons/: BulletShooter.h  Shooter.h
LightYears.Game/include/weapons/projectiles/: Bullet.h
LightYears.Game/src/gameframework/: GameApplication.cpp
LightYears.Game/src/gameplay/: HealthComponent.cpp
LightYears.Game/src/player/: PlayerSpaceship.cpp
LightYears.Game/src/spaceships/: Spaceship.cpp
LightYears.Game/src/weapons/: BulletShooter.cpp  Shooter.cpp
LightYears.Game/src/weapons/projectiles/: Bullet.cpp
